--- a/client/src/Components/Card/Card.module.css
+++ b/client/src/Components/Card/Card.module.css
@@ -1,25 +1,76 @@
 .card {
-  display: flex;
-  flex-direction: column;
-  background-color: rgba(15, 117, 34, 0.8);
+  background-color: rgb(159, 60, 60);
   width: 300px;
-  height: 600px;
-  justify-content: space-between;
-  border: 0.5em brown;
+  height: 250px;
+  border: 0.3em rgb(127, 3, 3) solid;
+  box-shadow: 5px 5px 5px black;
+  margin: 0.5em;
+  border-radius: 1em;
 }
 
-.cardImg {
-  
-  align-self: center;
-  background-color: rgba(20, 15, 117, 0.1);
-  border: 0.2em black
-}
-
-.cardInfo {
-  display: flex;
-  background-color: rgba(255, 0, 0, 0.1);
-  flex-direction: column;
-  justify-content: space-around;
+.cardInfo:hover {
+  background-color: rgba(255, 255, 255, 0.5);
+  position: relative;
+  top: -80%;
+  margin-bottom: 5%;
+  left: 5%;
   border: 0.2em black;
- 
+  box-sizing: content-box;
+  width: 90%;
+  padding: 0.001em;
+  color: rgb(0, 0, 0);
+  border-radius: 1em;
 }
+.cardInfo {
+  background-color: rgba(255, 255, 255, 0);
+  position: relative;
+  top: -80%;
+  margin-bottom: 5%;
+  left: 5%;
+  border: 0.2em black;
+  box-sizing: content-box;
+  width: 90%;
+  padding: 0.001em;
+  color: rgba(0, 0, 0, 0);
+  border-radius: 1em;
+}
+.nameInfo {
+  background-color: rgba(255, 255, 255, 0.8);
+  position: relative;
+  top: -105%;
+  margin-bottom: 5%;
+  left: 5%;
+  border: 0.2em black;
+  box-sizing: content-box;
+  width: 90%;
+  border-radius: 1em;
+}
+.nameInfo:hover {
+  background-color: rgba(255, 255, 255, 1);
+  position: relative;
+  top: -105%;
+  margin-bottom: 5%;
+  left: 5%;
+  border: 0.5em black;
+  box-sizing: content-box;
+  width: 90%;
+  box-shadow: 10px 5px 5px black;
+  border-radius: 1em;
+}
+img {
+  max-width: 100%;
+  max-height: 100%;
+  height: auto;
+  border-radius: 1em;
+}
+
+.imageDiv {
+  display: flex;
+  justify-content: center;
+  align-items: end;
+
+  width: 100%;
+  height: 100%;
+  border-radius: 1em;
+}
+
