--- a/client/src/Components/Paginate/Paginate.module.css
+++ b/client/src/Components/Paginate/Paginate.module.css
@@ -1,26 +1,29 @@
 .navContainer{
  background-color: blueviolet;
+ width: 90%;
 }
 
 .ulContainer{
-    padding: 0 0 5em 0.5em;
-    background-color: aqua;
+    display: flex;
+    flex-wrap: wrap;
+    align-items:baseline;
+    justify-content:center ;
+    background-color: rgb(0, 255, 0);
 }
 
 .liContainer{
     list-style: none;
-    float: left;
-    margin: 0.2em;
+    margin: 0.6em;
     text-align: center;
-    background-color: red;
+    border: 0.3em rgb(127, 3, 3) solid;
 }
-
-.liContainer button{
-    color: #575025;
-    background-color: white;
-    width: 2.1rem;
-    padding: 0.5rem 0.7rem;
-    border-radius: 25%;
-    border: 1px solid #575025;
+.liContainer:hover{
+    box-shadow: 3px 3px 2px black;   
+}
+.liContainerSelected{
+    list-style: none;
+    margin: 0.3em;
     text-align: center;
+    border: 0.3em rgb(127, 3, 3) solid;
+    box-shadow: 5px 5px 5px black;   
 }
